[tool.poetry]
name = "tenacity-poc"
version = "0.1.0"
description = "A quick and dirty test for this retry library"
authors = ["Javier Juarez <javier.juarez@gmail.com>"]
packages = [
  { include = "server" },
  { include = "client" },
]

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.0.1"
requests = "^2.31.0"
click = "^8.1.3"

[tool.poetry.scripts]
server = "server.__main__:main"
client = "client.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
